# sardinos

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  config.pri  examples.pro  generate_messages.py  install.bat  replace.vbs  vcsibuild.bat
CAD Files/: Test_Print_Airfoil.STL
actions/: ActionExampleDockWidget.cxx  ActionExampleDockWidget.h  ActionExamplePlugin.cxx  ActionExamplePlugin.h  ActionExamplePluginContent.cxx  ActionExamplePluginContent.h  DelayedActionPromiseFulfillment.cxx  DelayedActionPromiseFulfillment.h  actions.pro
audio/: Audio.qrc  AudioExampleDockWidget.cxx  AudioExampleDockWidget.h  AudioExamplePlugin.cxx  AudioExamplePlugin.h  AudioExamplePluginContent.cxx  AudioExamplePluginContent.h  audio.pro  audioExampleForm.ui
custom/: BoundingBox.cpp  BoundingBox.h  ContentCreator.cpp  ContentCreator.h  Drawing.cpp  Drawing.h  Drone.cpp  Drone.h  DroneTelemetry.cpp  DroneTelemetry.h  DroneWidget.h  FlightPather.cpp  FlightPather.h  ImageProcessor.cpp  ImageProcessor.h  Line.cpp  Makefile  Makefile.Debug  Makefile.Release  MathExt.cpp  MathExt.h  MissionDomain.cpp  MissionDomain.h  MissionManager.h  MissionPlanning.qrc  MissionPlanningContent.cpp  MissionPlanningContent.h  MissionPlanningContentCreator.cpp  MissionPlanningContentCreator.h  MissionPlanningDrawing.cpp  MissionPlanningDrawing.h  MissionPlanningLine.cpp  MissionPlanningLine.h  MissionPlanningPlugin.cpp  MissionPlanningPlugin.h  MissionPlanningPolygon.cpp  MissionPlanningPolygon.h  MissionPlanningPolygonDrawing.cpp  MissionPlanningPolygonDrawing.h  MissionPlanningWaypoint.cpp  (+21 more)
dockWidgets/: DockWidgetsContent.cxx  DockWidgetsContent.h  DockWidgetsPlugin.cxx  DockWidgetsPlugin.h  dockWidgets.pro  dockWidgets.qrc
dynamicVectorData/: DynamicVectorDataDrawing.cxx  DynamicVectorDataDrawing.h  DynamicVectorDataDrawingPlugin.cxx  DynamicVectorDataDrawingPlugin.h  DynamicVectorDataDrawingPluginContent.cxx  DynamicVectorDataDrawingPluginContent.h  DynamicVectorDataPolygon.cxx  DynamicVectorDataPolygon.h  dynamicVectorData.pro
flarmDevice/: FlarmDeviceExamplePlugin.cxx  FlarmDeviceExamplePlugin.h  FlarmDeviceExamplePluginContent.cxx  FlarmDeviceExamplePluginContent.h  flarmDevice.pro
graphicsWidgets/: GdtContent.cxx  GdtContent.h  GdtOverlay.qml  GdtOverlay.qrc  GdtWidgets.cxx  GdtWidgets.h  GraphicsWidgetContentCreator.cxx  GraphicsWidgetContentCreator.h  GraphicsWidgetPlugin.cxx  GraphicsWidgetPlugin.h  QmlGdtView.cxx  QmlGdtView.h  VehicleGraphicsWidgetDisplay.cxx  VehicleGraphicsWidgetDisplay.h  graphicsWidgets.pro
groundMode/: GroundModeContent.cxx  GroundModeContent.h  GroundModeContentCreator.cxx  GroundModeContentCreator.h  GroundModePlugin.cxx  GroundModePlugin.h  groundMode.pro
joystick/: JoystickDisplay.cxx  JoystickDisplay.h  JoystickPlugin.cxx  JoystickPlugin.h  joystick.pro
lights/: LightsContainer.cxx  LightsContainer.h  LightsContainerRegistry.cxx  LightsContainerRegistry.h  LightsPlugin.cxx  LightsPlugin.h  README.md  lights.pro
mapDrawing/: FaaObstacleContent.cxx  FaaObstacleContent.h  FaaObstacleForm.ui  FaaObstacleInfo.h  FaaObstacleSource.cxx  FaaObstacleSource.h  MapDrawingPlugin.cxx  MapDrawingPlugin.h  README.txt  mapDrawing.pro
messageDefinitions/: EngineeringToolsMessageFormat.xml  Message107.yaml  Message1302.yaml  Message1303.yaml  Message30264.yaml  Message30265.yaml  Message33264.yaml  Message33265.yaml  Message44.yaml  messageDefinitions.pro
missionDrawing/: ExampleGeospatialSimpleWaypoint.cxx  ExampleGeospatialSimpleWaypoint.h  ExampleMissionDomain.cxx  ExampleMissionDomain.h  ExampleSimpleWaypointConnector.cxx  ExampleSimpleWaypointConnector.h  MissionDrawingApiPlugin.cxx  MissionDrawingApiPlugin.h  MissionDrawingApiPluginContent.cxx  MissionDrawingApiPluginContent.h  missionDrawing.pro
notification/: ExampleNotificationContent.cxx  ExampleNotificationContent.h  NotificationContentCreator.cxx  NotificationContentCreator.h  NotificationPlugin.cxx  NotificationPlugin.h  NotificationToBeRemovedAfterTime.cxx  NotificationToBeRemovedAfterTime.h  NotificationWithLongString.cxx  NotificationWithLongString.h  notification.pro
pathplanner/: main.cpp
payloadDrawing/: ExamplePayloadDomain.cxx  ExamplePayloadDomain.h  ExamplePayloadDrawingApiPlugin.cxx  ExamplePayloadDrawingApiPlugin.h  ExamplePayloadDrawingApiPluginContent.cxx  ExamplePayloadDrawingApiPluginContent.h  ExamplePayloadProjectedFootprintDrawing.cxx  ExamplePayloadProjectedFootprintDrawing.h  ExamplePayloadStarepointDrawing.cxx  ExamplePayloadStarepointDrawing.h  payloadDrawing.pro
pluginDependingOnPlugin/: AnimalTrackerContent.cxx  AnimalTrackerContent.h  AnimalTrackerPlugin.cxx  AnimalTrackerPlugin.h  AnimalTrackerPlugin.pro  I_AnimalTrackerApi.cxx  I_AnimalTrackerApi.h  LivestockCounterContent.cxx  LivestockCounterContent.h  LivestockCounterPlugin.cxx  LivestockCounterPlugin.h  livestockCounter.pro
pointOfInterest/: PointOfInterestContent.cxx  PointOfInterestContent.h  PointOfInterestContextMenuContent.cxx  PointOfInterestContextMenuContent.h  PointOfInterestCrudContent.cxx  PointOfInterestCrudContent.h  PointOfInterestPlugin.cxx  PointOfInterestPlugin.h  PointOfInterestPlugin.qrc  pointOfInterest.pro
preflightChecklist/: PreflightChecklistExampleBusinessLogic.cxx  PreflightChecklistExampleBusinessLogic.h  PreflightChecklistExampleChecklistBuilder.cxx  PreflightChecklistExampleChecklistBuilder.h  PreflightChecklistExampleContent.cxx  PreflightChecklistExampleContent.h  PreflightChecklistExamplePlugin.cxx  PreflightChecklistExamplePlugin.h  PreflightChecklistExampleView.cxx  PreflightChecklistExampleView.h  preflightChecklist.pro
restrictionZoneApi/: RestrictionZoneApiExampleContent.cxx  RestrictionZoneApiExampleContent.h  RestrictionZoneApiExamplePlugin.cxx  RestrictionZoneApiExamplePlugin.h  RestrictionZoneApiExampleView.cxx  RestrictionZoneApiExampleView.h  example.kml  restrictionZoneApi.pro
routes/: CloakingDeviceJsonDefines.h  CloakingDevicePower.cxx  CloakingDevicePower.h  CustomCloakingDeviceUploadSource.cxx  CustomCloakingDeviceUploadSource.h  ReadonlyRoutesContent.cxx  (+31 more)
(+161 files in other folders)
